--- a/15-ComparingMeans.Rmd
+++ b/15-ComparingMeans.Rmd
@@ -15,7 +15,6 @@ library(tidyverse)
 library(ggplot2)
 library(tidyr)
 library(fivethirtyeight)
-#library(BayesMed)
 library(BayesFactor)
 library(lme4)
 library(lmerTest)
@@ -71,8 +70,8 @@ bt <- binom.test(npos, nrow(NHANES_sample), alternative='greater')
 bt
 ```
 
-<!-- Here we see that the proportion of individuals with positive signs is not very surprising under the null hypothesis of $p=0.5$.  -->
-Aquí vemos que la proporción de personas con signo positivo no es muy sorprendente bajo la hipótesis nula de $p=0.5$.
+<!-- Here we see that the proportion of individuals with positive signs is not very surprising under the null hypothesis of $p \le 0.5$, which should not surprise us given that the observed value is actually less than $0.5$.  -->
+Aquí vemos que la proporción de personas con signo positivo no es muy sorprendente bajo la hipótesis nula de $p \le 0.5$, lo que no debería sorprendernos dado que el valor observado en realidad es menor que $0.5$.
 
 <!-- We can also ask this question using Student's t-test, which you have already encountered earlier in the book.  We will refer to the mean as $\bar{X}$ and the hypothesized population mean as $\mu$.  Then, the t test for a single mean is: -->
 También podemos hacer esta pregunta usando la prueba t de Student, que ya te has encontrado antes en este libro. Nos referiremos a la media como $\bar{X}$ y a la media poblacional hipotetizada como $\mu$. Entonces, la prueba t para una sola media es:
@@ -151,7 +150,6 @@ lm_summary <- summary(lm(TVHrsNum ~ RegularMarij, data = NHANES_sample))
 ttresult <- t.test(
   TVHrsNum ~ RegularMarij,
   data = NHANES_sample,
-  var.equal = TRUE,
   alternative = 'less'
 )
 
@@ -176,8 +174,8 @@ $$
 t = \frac{\bar{X_1} - \bar{X_2}}{\sqrt{\frac{S_1^2}{n_1} + \frac{S_2^2}{n_2}}}
 $$
 
-<!-- where $\bar{X}_1$ and $\bar{X}_2$ are the means of the two groups, $S^2_1$ and $S^2_2$ are the variances for each of the groups, and $n_1$ and $n_2$ are the sizes of the two groups.  Under the null hypothesis of no difference between means, this statistic is distributed according to a t distribution with N - 2 degrees of freedom (since we have computed two parameter estimates, namely the means of the two groups). In this case, we started with the specific hypothesis that smoking marijuana is associated with greater TV watching, so we will use a one-tailed test.  Here are the results from our statistical software: -->
-donde $\bar{X}_1$ y $\bar{X}_2$ son las medias de los dos grupos, $S^2_1$ y $S^2_2$ son las varianzas para cada grupo, y $n_1$ y $n_2$ son los tamaños de los dos grupos. Bajo la hipótesis nula de no diferencia entre medias, este estadístico se distribuye de acuerdo a una distribución t con N - 2 grados de libertad (como hemos calculado dos estimaciones de parámetros, que fueron las medias de los dos grupos). En este caso, comenzamos con la hipótesis específica de que fumar marihuana está asociado con mayor tiempo de ver TV, por lo que usaremos una prueba de una cola. Aquí están los resultados de nuestro software estadístico:
+<!-- where $\bar{X}_1$ and $\bar{X}_2$ are the means of the two groups, $S^2_1$ and $S^2_2$ are the variances for each of the groups, and $n_1$ and $n_2$ are the sizes of the two groups.  Under the null hypothesis of no difference between means, this statistic is distributed according to a t distribution, with degrees of freedom computed using the Welch test (as discussed previously) since the number of individuals differs between the two groups. In this case, we started with the specific hypothesis that smoking marijuana is associated with greater TV watching, so we will use a one-tailed test.  Here are the results from our statistical software: -->
+donde $\bar{X}_1$ y $\bar{X}_2$ son las medias de los dos grupos, $S^2_1$ y $S^2_2$ son las varianzas para cada grupo, y $n_1$ y $n_2$ son los tamaños de los dos grupos. Bajo la hipótesis nula de no diferencia entre medias, este estadístico se distribuye de acuerdo a una distribución t, con grados de libertad calculados usando la prueba de Welch (como se discutió previamente) puesto que el número de personas difiere entre los dos grupos. En este caso, comenzamos con la hipótesis específica de que fumar marihuana está asociado con mayor tiempo de ver TV, por lo que usaremos una prueba de una cola. Aquí están los resultados de nuestro software estadístico:
 
 ```{r echo=FALSE,warning=FALSE}
 # compute t test for tv watching as function of marijuana use
@@ -196,8 +194,8 @@ La prueba t es frecuentemente presentada como una herramienta especializada para
 $$
 \hat{TV} = \hat{\beta_1}*Marijuana + \hat{\beta_0}
 $$
-<!-- Since smoking is a binary variable, we treat it as a *dummy variable* like we discussed in the previous chapter, setting it to a value of 1 for smokers and zero for nonsmokers.  In that case, $\hat{\beta_1}$ is simply the difference in means between the two groups, and $\hat{\beta_0}$ is the mean for the group that was coded as zero.  We can fit this model using the general linear model function in our statistical software, and see that it gives the same t statistic as the t-test above, except that it's negative in this case because of the way that our software arranges the groups: -->
-Como el fumar es una variable binaria, la tratamos como una *variable ficticia* (*dummy variable*) como discutimos en el capítulo anterior, fijándola en un valor de 1 para fumadores o de cero para no fumadores. En este caso, $\hat{\beta_1}$ es simplemente la diferencia de las medias entre los dos grupos, y $\hat{\beta_0}$ es la media para el grupo que fue codificado con cero. Podemos ajustar este modelo usando la función del modelo lineal general en nuestro software estadístico, y ver que nos da el mismo estadístico t como la prueba t de arriba, excepto que fue negativa en ese caso por la manera en que nuestro software acomoda los grupos:
+<!-- Since smoking is a binary variable, we treat it as a *dummy variable* like we discussed in the previous chapter, setting it to a value of 1 for smokers and zero for nonsmokers.  In that case, $\hat{\beta_1}$ is simply the difference in means between the two groups, and $\hat{\beta_0}$ is the mean for the group that was coded as zero.  We can fit this model using the general linear model function in our statistical software, and see that it gives the same t statistic as the t-test above, except that it's positive in this case because of the way that our software arranges the groups: -->
+Como el fumar es una variable binaria, la tratamos como una *variable ficticia* (*dummy variable*) como discutimos en el capítulo anterior, fijándola en un valor de 1 para fumadores o de cero para no fumadores. En este caso, $\hat{\beta_1}$ es simplemente la diferencia de las medias entre los dos grupos, y $\hat{\beta_0}$ es la media para el grupo que fue codificado con cero. Podemos ajustar este modelo usando la función del modelo lineal general en nuestro software estadístico, y ver que nos da el mismo estadístico t como la prueba t de arriba, excepto que fue positiva en este caso por la manera en que nuestro software ordena los grupos:
 
 ```{r echo=FALSE, warning=FALSE}
 # print summary of linear regression to perform t-test
@@ -222,8 +220,8 @@ $$
 <!-- We can obtain these values from the analysis output above, giving us a d = `r I(sprintf('%0.2f', lm_summary$coefficients[2,1]/lm_summary$sigma))`, which we would generally interpret as a medium sized effect. -->
 Podemos obtener estos valores de la salida del análisis arriba, dándonos una d = `r I(sprintf('%0.2f', lm_summary$coefficients[2,1]/lm_summary$sigma))`, que generalmente interpretaríamos como un tamaño de efecto medio.
 
-<!-- We can also compute $R^2$ for this analysis, which tells us how much variance in TV watching is accounted for.  This value (which is reported at the bottom of the summary of the linear model analysis above) is `r I(sprintf('%0.2f',lm_summary$r.squared))`, which tells us that while the effect may be statistically significant, it accounts for relatively little of the variance in TV watching. -->
-También podemos calcular $R^2$ para este análisis, que nos dice cuánto de la varianza en tiempo de ver TV es explicada por el modelo. Este valor (que es reportado hasta abajo del resumen del análisis de modelo lineal) es `r I(sprintf('%0.2f',lm_summary$r.squared))`, que nos dice que mientras que el efecto podrá ser estadísticamente significativo, explica relativamente poco de la varianza en tiempo de ver TV.
+<!-- We can also compute $R^2$ for this analysis, which tells us how what proportion of the variance in TV watching is accounted for by marijuana smoking.  This value (which is reported at the bottom of the summary of the linear model analysis above) is `r I(sprintf('%0.2f',lm_summary$r.squared))`, which tells us that while the effect may be statistically significant, it accounts for relatively little of the variance in TV watching. -->
+También podemos calcular $R^2$ para este análisis, que nos dice qué proporción de la varianza en el tiempo de ver TV es explicada por el fumar marihuana. Este valor (que es reportado hasta abajo del resumen del análisis de modelo lineal) es `r I(sprintf('%0.2f',lm_summary$r.squared))`, que nos dice que mientras que el efecto podrá ser estadísticamente significativo, explica relativamente poco de la varianza en tiempo de ver TV.
 
 <!-- ## Bayes factor for mean differences -->
 ## Factores de Bayes para diferencias entre medias
@@ -297,8 +295,8 @@ t.test(
 )
 ```
 
-<!-- This analysis shows no significant difference. However, this analysis is inappropriate since it assumes that the two samples are independent, when in fact they are not, since the data come from the same individuals.  We can plot the data with a line for each individual to show this (see Figure \@ref(fig:BPfig)). -->
-Este análisis muestra que no hay una diferencia estadísicamente significativa. Sin embargo, este análisis es inapropiado porque asume que las dos muestras son independientes, cuando de hecho no lo son, ya que los datos vienen de las mismas personas. Podemos graficar los datos con una línea para cada individuo para mostrar esto (ve la Figura \@ref(fig:BPfig)).
+<!-- This analysis shows no significant difference. However, this analysis is inappropriate since it assumes that the two samples are independent, when in fact they are not, since the data come from the same individuals.  We can plot the data with a line for each individual to show this (see the right panel in Figure \@ref(fig:BPfig)). -->
+Este análisis muestra que no hay una diferencia estadísicamente significativa. Sin embargo, este análisis es inapropiado porque asume que las dos muestras son independientes, cuando de hecho no lo son, ya que los datos vienen de las mismas personas. Podemos graficar los datos con una línea para cada individuo para mostrar esto (ve el panel derecho de la Figura \@ref(fig:BPfig)).
 
 <!-- In this analysis, what we really care about is whether the blood pressure for each person changed in a systematic way between the two measurements, so another way to represent the data is to compute the difference between the two timepoints for each individual, and then analyze these difference scores rather than analyzing the individual measurements. In Figure \@ref(fig:BPDiffHist), we show a histogram of these difference scores, with a blue line denoting the mean difference. -->
 En este análisis, lo que realmente nos importa es saber si la presión sanguínea de cada persona cambia de una manera sistemática entre las dos mediciones, así que otra manera de representar estos datos es calculando la diferencia entre dos puntos en el tiempo para cada persona, y luego analizar estas diferencias en lugar de analizar las mediciones individuales. En la Figura \@ref(fig:BPDiffHist) vemos un histograma de estas puntuaciones de diferencias, con una línea azul denotando la media de las diferencias.
